--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.production.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-        <title>Contact Aneri Patel</title>
+        <title>Portfolio</title>
     </head>
 <body>
     
