Fix the uppercase problem.

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                 <button>Download CV</button>
                 
                 <div class="vector-img">
-                    <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="body_1" width="auto"  height="auto" viewBox="0 0 500 400">
+                    <svg  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="body_1" width="auto"  height="auto" viewbox="0 0 500 400">
                         <g transform="matrix(0.20662358 0 0 0.20662358 9.479739 -0)">
 
                             <g>
