--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="./img/favicon.png">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
+        <link rel="stylesheet" type="text/css" href="./css/style.production.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
         <title>Contact Aneri Patel</title>
     </head>
@@ -38,15 +38,17 @@
                 <div class="contact-form">
                     <h1>Contact Form</h1> 
                     <form action="/action_page.php" method="post">
-                        <label for="contact-email">Email: </label>
-                        <input type="email" id="contact-email" required>
-                        <label for="contact-num">Telephone: </label>
-                        <input type="tel" id="contact-num">
-                        <label for="my-input">Message: </label>
-                        <p class="full"> 
-                            <textarea maxlength="240" id="my-input" required></textarea> 
-                        </p>                      
-                        <button>Submit</button>
+                        <p>
+                            <label for="contact-email">Email: </label>
+                            <input type="email" id="contact-email" required>
+                            <label for="contact-num">Telephone: </label>
+                            <input type="tel" id="contact-num">
+                            <label for="my-input">Message: </label>
+                            <p class="full"> 
+                                <textarea maxlength="240" id="my-input" required></textarea> 
+                            </p>                      
+                            <button>Submit</button>
+                        </p>    
                     </form>
                 </div>
             </div> 
