--- a/about.html
+++ b/about.html
@@ -2524,14 +2524,14 @@
         </section>
     </main>
 
-   <!--footer -->
-   <footer class="page-footer">
-        <div class="social-icons">
-            <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./img/twitter.svg" alt="Twitter"></a> 
-            <a href=" ./img/linkedin.svg" target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
-            <a href=" ./img/github.svg" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
-        </div>    
-    </footer>
+  <!--footer -->
+  <footer class="page-footer">
+    <div class="social-icons">
+        <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./img/twitter.svg" alt="Twitter"></a> 
+        <a href=" https://www.linkedin.com/feed/ " target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
+        <a href=" https://github.com/Aneri3112" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
+    </div>    
+  </footer>
  
      <!--Script-->
     <script src="js/tota11y.min.js"></script>
