--- a/contact.html
+++ b/contact.html
@@ -29,9 +29,9 @@
         <div class="container">
             <div class="flex-container"> 
                 <div class="flex-child">
-                    Tel:  <a class="contact_detail" href="tel:+491234567891"> Call me on this.</a><br>
+                    Tel:  <a class="contact_detail" href="tel:+491794409976"> Call me on this.</a><br>
                     Skype: <a class="contact_detail" href="skype:aneri.pate@hotmail.com"> aneri.pate@hotmail.com </a><br>
-                    Email: <a class="contact_detail" href="mailto:aneri.pate@hotmail.com">aneri.pate@hotmail.com</a><br>
+                    Email: <a class="contact_detail" href="mailto:aneripatel.bsc@gmail.com">aneripatel.bsc@gmail.com</a><br>
                     <a class="contact_detail" href="mailto:aneri.pate@hotmail.com">Contact Me</a>
                 </div>
 
@@ -59,8 +59,8 @@
     <footer class="page-footer">
         <div class="social-icons">
             <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./img/twitter.svg" alt="Twitter"></a> 
-            <a href=" ./img/linkedin.svg" target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
-            <a href=" ./img/github.svg" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
+            <a href=" https://www.linkedin.com/feed/ " target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
+            <a href=" https://github.com/Aneri3112" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
         </div>    
     </footer>
 
