--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
         <!--footer -->
         <footer class="page-footer">
-            <div class="social-icons">
-                <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./img/twitter.svg" alt="Twitter"></a> 
-                <a href=" ./img/linkedin.svg" target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
-                <a href=" ./img/github.svg" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
-            </div>    
-        </footer>
+          <div class="social-icons">
+              <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./img/twitter.svg" alt="Twitter"></a> 
+              <a href=" https://www.linkedin.com/feed/ " target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
+              <a href=" https://github.com/Aneri3112" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
+          </div>    
+      </footer>
     
 
         <!--load javascript after loading HTML content -->
