--- a/index.html
+++ b/index.html
@@ -1,51 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="./img/favicon.png">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.production.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
-        <title>Portfolio</title>
-    </head>
-    <body>
-        <!--Header Section-->
-        <header>
-            <img class="logo" src="./img/logo.PNG" alt="logo">
-            <nav class="nav">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-                    <li class="nav__item"><a href="about.html" class="nav__link">About me</a></li>
-                    <li class="nav__item"><a href="work.html" class="nav__link">My Work</a></li>
-                    <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 
-        <!--Main Section-->
-        <main>
-            <section class="intro" id="home">
-                <img src="./img/my-image.jpg" alt="My Image" class="intro__img">
-                <h1 class="section__title section__title--intro">
-                    Hi, I am <strong>Aneri Patel</strong>
-                </h1>
-                <p class="section__subtitle section__subtitle--intro">Front-End Developer</p>
-                <a class="section__link section__subtitle--link" href="#">Check out some of my code</a>
-            </section>
-        </main>
+  </head>
+  <body>
+    <div class="scroll-up-btn">
+      <i class="fas fa-angle-up"></i>
+    </div>
 
-        <!--footer -->
-        <footer class="page-footer">
-          <div class="social-icons">
-              <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./img/twitter.svg" alt="Twitter"></a> 
-              <a href=" https://www.linkedin.com/feed/ " target="_blank"> <img height= "30" width="30" src="./img/linkedin.svg" alt="Linkedin"></a>
-              <a href=" https://github.com/Aneri3112" target="_blank"> <img height= "30" width="30" src="./img/github.svg" alt="Github"></a>
+    <nav class="navbar">
+      <div class="max-width">
+        <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+        <ul class="menu">
+          <li><a href="#home" class="menu-btn">Home</a></li>
+          <li><a href="#about" class="menu-btn">About</a></li>
+          <li><a href="#projects" class="menu-btn">Projects</a></li>
+          <li><a href="#skills" class="menu-btn">Skills</a></li>
+          <li><a href="#services" class="menu-btn">Education</a></li>
+          <li><a href="#contact" class="menu-btn">Contact</a></li>
+        </ul>       
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
+      </div>
+    </nav>
+
+    <!-- home section start -->
+    <section class="home" id="home">
+      <div class="max-width">
+        <div class="home-content">
+          <div class="text-1">Hello, my name is</div>
+          <div class="text-2">Aneri Patel</div>
+          <div class="text-3">And I'm a <span class="web">Web Developer</span></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- about section start -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/my-image.jpg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Aneri and I'm  <span class="typing-2"></span></div>
+                    <p>accurate and immensely motivated web developer. Bringing forth a motivated attitude and a variety of powerful skills. Possess great organizational skills with the ability to work efficiently. Eager to learn new things with quick learning ability, that will follow your directions, rules and procedures.
+                    </p>
+                    <a href="files/Aneri_Patel_CV.pdf">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- teams section start -->
+    <section class="teams" id="projects">
+      <div class="max-width">
+        <h2 class="title">My Projects</h2>
+        <div class="carousel owl-carousel">
+          <div class="card">
+            <div class="box">
+              <img src="images/Pokemon.png" alt="">
+              <div class="text">Pokemon App</div>
+              <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry. The app shows the list of 52 Pokemons and there details on click like Image, Height, Weight and Abilities.</p>
+              <div>
+                <a class="github-work" target="_blank" href="https://github.com/Aneri3112/script-js-app"> Project on Github</a>  <br>
+                <a class="github-work" target="_blank" href="https://aneri3112.github.io/script-js-app/">Live Demo</a> 
+              </div>         
+            </div>
+          </div>  
+
+          <div class="card">
+            <div class="box">
+              <img src="images/myFlix_client.png" alt="">
+              <div class="text">myFlix</div>
+              <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry.The web application provide users with access to information about movies, directors,description, and genres. Users will be able to sign up, update their information, and create a list of their favorite movies.</p>
+              <div>
+                <a class="github-work" target="_blank" href="https://github.com/Aneri3112/myFlix"> Project on Github</a> <br>
+                <a class="github-work" target="_blank" href="https://myflix-special.netlify.app">Live Demo</a> 
+              </div>
+            </div>
+          </div>
+          
+          <div class="card">
+            <div class="box">
+              <img src="images/angular.png" alt="">
+              <div class="text">myFlix-Angular-client</div>
+              <p>The aim of this project is to build the client-side for an application called myFlix using Angular based on its existing server-side code (REST API and database), with supporting documentation.</p>
+              <div>
+                <a class="github-work" target="_blank" href="https://myflix-angular-client.patelaneri.com/welcome">Project on Github</a> <br>
+                <a class="github-work" target="_blank" href="https://myflix-angular-client.patelaneri.com/welcome">Live Demo</a> 
+              </div>
+            </div>
+          </div>
+        </div>      
+      </div>
+    </section>
+
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+      <div class="max-width">
+        <h2 class="title">My skills</h2>
+        <div class="skills-content">
+          <div class="column left">
+            <div class="text">My creative skills & experiences.</div>
+            <p> Focusing on my passion about web developer, currently I am enrolled as a Full-Stack Web Developer student at CareerFoundry. Where I am grasping my knowledge in HTML, CSS, JAVASCRIPT, REACT, ANGULAR, JSON, NODE.JS, SQL, MONGODB and so many different technical languages and frameworks. My most recent work experience is as a Shift Leader at Gorillas GmbH, where I was responsible for leading & developing a team, taking care of the warehouse operations while assisting with tasks as necessary, ensuring optimal product quality and high customer satisfaction, responsible for strategic demand planning & inventory accuracy of warehouse, managing and assigning tasks to Inventory Associates and Pickers, Responsible for incoming shipments</p>
+            <a href="https://github.com/Aneri3112?tab=repositories" target="_blank" type="button">CHECK PROJECTS OM MY REPOSITORY</a>
+          </div>
+          <div class="column right">
+            <div class="bars">
+              <div class="info">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="line html"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>CSS</span>
+                <span>60%</span>
+              </div>
+              <div class="line css"></div>
+            </div>
+            <div class="bars">
+              <div class="info">
+                <span>JavaScript</span>
+                <span>70%</span>
+              </div>
+              <div class="line js"></div>
+            </div>
+             <div class="bars">
+              <div class="info">
+                <span>React</span>
+                <span>60%</span>
+              </div>
+              <div class="line react"></div>
+            </div>        
+            <div class="bars">
+              <div class="info">
+                <span>Angular</span>
+                <span>40%</span>
+              </div>
+              <div class="line angular"></div>
+            </div>         
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- services section start -->
+    <section class="services" id="services">
+      <div class="max-width">
+        <h2 class="title">Education</h2>
+        <div class="serv-content">
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-code"></i>
+              <div class="text">Full-Stack Web Development</div>
+              <p>Pursuing Full-Stack Web Developer course at CareerFoundry.</p>
+            </div>      
+          </div>
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-graduation-cap"></i>
+              <div class="text">Bachelor in Computer Science</div>
+              <p>I have completed Bachelor Degree in Computer Science from VNSGU, Gujarat, India.</p>      
+            </div>
+          </div>
+          <div class="card">
+            <div class="box">
+              <i class="fas fa-heart"></i>
+              <div class="text">Internship</div>
+              <p>I have done Internship as a Digital Sales Co-ordinator at Mady SMS Service Limited, Gujarat, India</p>
+            </div>
           </div>    
-      </footer>
-    
+        </div>
+      </div>
+    </section>
 
-        <!--load javascript after loading HTML content -->
-        <script src="js/tota11y.min.js"></script>
-    </body>
+    <!-- contact section start -->
+    <section class="contact" id="contact">
+      <div class="max-width">
+        <h2 class="title">Contact me</h2>
+        <div class="contact-content">
+          <div class="column left">
+            <div class="icons">
+              <div class="row">
+                <i class="fas fa-user"></i>
+                  <div class="info">
+                    <div class="head">Name</div>
+                    <div class="sub-title">Aneri Patel</div>
+                  </div>
+              </div>
+              <div class="row">
+                <i class="fas fa-map-marker-alt"></i>
+                <div class="info">
+                  <div class="head">Address</div>
+                  <div class="sub-title">Munich, Germany</div>
+                </div>
+              </div>            
+              <div class="row">
+                <i class="fas fa-envelope"></i>
+                <div class="info">
+                  <div class="head">Email</div>
+                  <div class="sub-title">aneripatel.bsc@gmail.com</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="column right">
+            <div class="text">Get in Touch</div>
+            <p>I'm always looking for new challenges, so reach out if you think I could be a fit for your current role!</p>
+            <div class="button-area"></div>
+            <a href="mailto:aneripatel.bsc@gmail.com" type="button" target="_blank">
+              <span class="button-text">Email me!</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer section start -->
+    <footer class= "page-footer">
+      <div class="social-icons">
+        <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./images/twitter.svg" alt="Twitter"></a> 
+        <a href=" https://www.linkedin.com/feed/ " target="_blank"> <img height= "30" width="30" src="./images/linkedin.svg" alt="Linkedin"></a>
+        <a href=" https://github.com/Aneri3112" target="_blank"> <img height= "30" width="30" src="./images/github.svg" alt="Github"></a>
+      </div>  
+    </footer>
+
+    <script src="script.js"></script>
+  </body>
 </html>
