--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -26,7 +26,7 @@
           <li><a href="#about" class="menu-btn">About</a></li>
           <li><a href="#projects" class="menu-btn">Projects</a></li>
           <li><a href="#skills" class="menu-btn">Skills</a></li>
-          <li><a href="#services" class="menu-btn">Education</a></li>
+          <li><a href="#education" class="menu-btn">Education</a></li>
           <li><a href="#contact" class="menu-btn">Contact</a></li>
         </ul>       
         <div class="menu-btn">
@@ -71,7 +71,8 @@
         <div class="carousel owl-carousel">
           <div class="card">
             <div class="box">
-              <img src="images/Pokemon.png" alt="">
+              <a class="picture" href="images/Pokemon.png" target="_blank">
+              <img src="images/Pokemon.png" alt="Pokemon app picture"></a>
               <div class="text">Pokemon App</div>
               <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry. The app shows the list of 52 Pokemons and there details on click like Image, Height, Weight and Abilities.</p>
               <div>
@@ -83,7 +84,8 @@
 
           <div class="card">
             <div class="box">
-              <img src="images/myFlix_client.png" alt="">
+              <a class="picture" href="images/myFlix_client.png" target="_blank">
+              <img src="images/myFlix_client.png" alt=""></a>
               <div class="text">myFlix</div>
               <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry.The web application provide users with access to information about movies, directors,description, and genres. Users will be able to sign up, update their information, and create a list of their favorite movies.</p>
               <div>
@@ -95,7 +97,8 @@
           
           <div class="card">
             <div class="box">
-              <img src="images/angular.png" alt="">
+              <a class="picture" href="images/angular.png" target="_blank">
+              <img src="images/angular.png" alt=""></a>
               <div class="text">myFlix-Angular-client</div>
               <p>The aim of this project is to build the client-side for an application called myFlix using Angular based on its existing server-side code (REST API and database), with supporting documentation.</p>
               <div>
@@ -103,7 +106,31 @@
                 <a class="github-work" target="_blank" href="https://myflix-angular-client.patelaneri.com/welcome">Live Demo</a> 
               </div>
             </div>
-          </div>
+          </div>   
+
+            <div class="card">
+              <div class="box">
+                <a class="picture" href="images/Todo.png" target="_blank">
+                <img src="images/Todo.png" alt=""></a>
+                <div class="text">To-Do-list</div>
+                <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry.A simple ToDo List App. This is a study project to learn jQuery.</p>
+                <div>
+                  <a class="github-work" target="_blank" href="https://github.com/Aneri3112/to-do-list">Project on Github</a> <br>
+                  <a class="github-work" target="_blank" href="https://aneri3112.github.io/to-do-list/">Live Demo</a> 
+                </div>
+              </div>
+            </div>
+              <div class="card">
+                <div class="box">
+                  <a class="picture" href="images/chat.png" target="_blank">
+                  <img src="images/chat.png" alt=""></a>
+                  <div class="text">ChatApp</div>
+                  <p>The aim of this project is to build a chat app for mobile devices using React Native. The app will provide users with a chat interface and options to share images and their location.</p>
+                  <div>
+                    <a class="github-work" target="_blank" href="https://github.com/Aneri3112/ChatApp">Project on Github</a> <br>
+                  </div>
+                </div>
+              </div>
         </div>      
       </div>
     </section>
@@ -160,7 +187,7 @@
     </section>
 
     <!-- services section start -->
-    <section class="services" id="services">
+    <section class="services" id="education">
       <div class="max-width">
         <h2 class="title">Education</h2>
         <div class="serv-content">
