Update picture resoulation

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         <div class="carousel owl-carousel">
           <div class="card">
             <div class="box">
-              <a class="picture" href="images/Pokemon.png" target="_blank">
-              <img src="images/Pokemon.png" alt="Pokemon app picture"></a>
+              <a class="picture" href="images/Pokemon.jpeg" target="_blank">
+              <img src="images/Pokemon.jpeg" alt="Pokemon app picture"></a>
               <div class="text">Pokemon App</div>
               <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry. The app shows the list of 52 Pokemons and there details on click like Image, Height, Weight and Abilities.</p>
               <div>
@@ -84,8 +84,8 @@
 
           <div class="card">
             <div class="box">
-              <a class="picture" href="images/myFlix_client.png" target="_blank">
-              <img src="images/myFlix_client.png" alt=""></a>
+              <a class="picture" href="images/myFlix_client.jpeg" target="_blank">
+              <img src="images/myFlix_client.jpeg" alt=""></a>
               <div class="text">myFlix</div>
               <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry.The web application provide users with access to information about movies, directors,description, and genres. Users will be able to sign up, update their information, and create a list of their favorite movies.</p>
               <div>
@@ -97,8 +97,8 @@
           
           <div class="card">
             <div class="box">
-              <a class="picture" href="images/angular.png" target="_blank">
-              <img src="images/angular.png" alt=""></a>
+              <a class="picture" href="images/angular.jpeg" target="_blank">
+              <img src="images/angular.jpeg" alt=""></a>
               <div class="text">myFlix-Angular-client</div>
               <p>The aim of this project is to build the client-side for an application called myFlix using Angular based on its existing server-side code (REST API and database), with supporting documentation.</p>
               <div>
@@ -110,8 +110,8 @@
 
             <div class="card">
               <div class="box">
-                <a class="picture" href="images/Todo.png" target="_blank">
-                <img src="images/Todo.png" alt=""></a>
+                <a class="picture" href="images/Todo.jpeg" target="_blank">
+                <img src="images/Todo.jpeg" alt=""></a>
                 <div class="text">To-Do-list</div>
                 <p>This application is developed for a Full-Stack Web Development Course at CareerFoundry.A simple ToDo List App. This is a study project to learn jQuery.</p>
                 <div>
@@ -122,8 +122,8 @@
             </div>
               <div class="card">
                 <div class="box">
-                  <a class="picture" href="images/chat.png" target="_blank">
-                  <img src="images/chat.png" alt=""></a>
+                  <a class="picture" href="images/chat.jpeg" target="_blank">
+                  <img src="images/chat.jpeg" alt=""></a>
                   <div class="text">ChatApp</div>
                   <p>The aim of this project is to build a chat app for mobile devices using React Native. The app will provide users with a chat interface and options to share images and their location.</p>
                   <div>
