Add link to twitter and medium

--- a/index.html
+++ b/index.html
@@ -261,9 +261,11 @@
     <!-- footer section start -->
     <footer class= "page-footer">
       <div class="social-icons">
-        <a href=" ./img/twitter.svg" target="_blank"><img height= "30" width="30" src="./images/twitter.svg" alt="Twitter"></a> 
+        <a href="https://twitter.com/Aneri3112" target="_blank"><img height= "30" width="30" src="./images/twitter.svg" alt="Twitter"></a> 
         <a href=" https://www.linkedin.com/feed/ " target="_blank"> <img height= "30" width="30" src="./images/linkedin.svg" alt="Linkedin"></a>
         <a href=" https://github.com/Aneri3112" target="_blank"> <img height= "30" width="30" src="./images/github.svg" alt="Github"></a>
+        <a href=" https://medium.com/@aneripatel.bsc" target="_blank"> <img height= "30" width="30" src="./images/medium.svg" alt="Github"></a>
+
       </div>  
     </footer>
 
