--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <!-- teams section start -->
-    <section class="teams" id="projects">
+    <section class="project" id="projects">
       <div class="max-width">
         <h2 class="title">My Projects</h2>
         <div class="carousel owl-carousel">
